新增版本更新记录

--- a/docs/版本更新记录.md
+++ b/docs/版本更新记录.md
@@ -1,3 +1,16 @@
+## 0.6.0
+
+新增功能：
+
+- [#16 优化一般表达式的解析逻辑](https://github.com/ChangxingJiang/metasequoia-sql/pull/16)
+- [#19 优化抽象语法树节点和语法解析器的实现逻辑](https://github.com/ChangxingJiang/metasequoia-sql/pull/19)
+- [#23 抽象语法树名称规范化 + 抽象语法树解析性能优化](https://github.com/ChangxingJiang/metasequoia-sql/pull/23)
+- [#25 新增 DELETE 语句解析逻辑](https://github.com/ChangxingJiang/metasequoia-sql/pull/25)
+
+Bugfix：
+
+- [#27 修复 Hive 建表语句中 DECIMAL、VARCHAR、CHAR 类型没有参数的问题](https://github.com/ChangxingJiang/metasequoia-sql/pull/27)
+
 ## 0.5.0
 
 新增：
