UnitTest：将 general_expression 中的可选关键字迁移到 optional_keyword 文件中

--- a/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
+++ b/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
@@ -9,3 +9,5 @@
 | `opt_keyword_of`        | 可选的 `OPT` 关键字       | -          | `opt_of`                                   |
 | `opt_keyword_storage`   | 可选的 `STORAGE` 关键字   | -          | `opt_storage`                              |
 | `opt_keyword_temporary` | 可选的 `TEMPORARY` 关键字 | `bool`     | `opt_temporary`                            |
+| `opt_keyword_array`     | 可选的 `ARRAY` 关键字     | `bool`     | `opt_array_cast`                           |
+| `opt_keyword_interval`  | 可选的 `INTERVAL` 关键字  | `bool`     | `opt_interval`                             |
