--- a/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
+++ b/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
@@ -4,10 +4,12 @@
 | ----------------------- | ------------------------- | ---------- | ------------------------------------------ |
 | `opt_keyword_all`       | 可选的 `ALL` 关键字       | `bool`     | `opt_all`<br />`opt_replica_reset_options` |
 | `opt_keyword_array`     | 可选的 `ARRAY` 关键字     | `bool`     | `opt_array_cast`                           |
+| `opt_keyword_as`        | 可选的 `AS` 关键字        | -          | `opt_as`                                   |
 | `opt_keyword_default`   | 可选的 `DEFAULT` 关键字   | -          | `opt_default`                              |
 | `opt_keyword_extended`  | 可选的 `EXTENDED` 关键字  | `bool`     | `opt_extended`                             |
 | `opt_keyword_interval`  | 可选的 `INTERVAL` 关键字  | `bool`     | `opt_interval`                             |
 | `opt_keyword_into`      | 可选的 `INTO` 关键字      | -          | `opt_INTO`                                 |
+| `opt_keyword_linear`    | 可选的 `LINEAR` 关键字    | -          | `opt_linear`                               |
 | `opt_keyword_of`        | 可选的 `OPT` 关键字       | -          | `opt_of`                                   |
 | `opt_keyword_storage`   | 可选的 `STORAGE` 关键字   | -          | `opt_storage`                              |
 | `opt_keyword_temporary` | 可选的 `TEMPORARY` 关键字 | `bool`     | `opt_temporary`                            |
