单元测试：整理词语组合语义组

--- a/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
+++ b/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
@@ -7,11 +7,17 @@
 | `opt_keyword_as`        | 可选的 `AS` 关键字        | -          | `opt_as`                                   |
 | `opt_keyword_default`   | 可选的 `DEFAULT` 关键字   | -          | `opt_default`                              |
 | `opt_keyword_extended`  | 可选的 `EXTENDED` 关键字  | `bool`     | `opt_extended`                             |
+| `opt_keyword_force`     | 可选的 `FORCE` 关键字     | `bool`     | `opt_force`                                |
+| `opt_keyword_full`      | 可选的 `FULL` 关键字      | `bool`     | `opt_full`                                 |
+| `opt_keyword_from`      | 可选的 `FROM` 关键字      | -          | `opt_from_keyword`                         |
 | `opt_keyword_inner`     | 可选的 `INNER` 关键字     | -          | `opt_inner`                                |
 | `opt_keyword_interval`  | 可选的 `INTERVAL` 关键字  | `bool`     | `opt_interval`                             |
 | `opt_keyword_into`      | 可选的 `INTO` 关键字      | -          | `opt_INTO`                                 |
 | `opt_keyword_linear`    | 可选的 `LINEAR` 关键字    | -          | `opt_linear`                               |
 | `opt_keyword_of`        | 可选的 `OPT` 关键字       | -          | `opt_of`                                   |
 | `opt_keyword_outer`     | 可选的 `OUTER` 关键字     | -          | `opt_outer`                                |
+| `opt_keyword_savepoint` | 可选的 `SAVEPOINT` 关键字 | -          | `opt_savepoint`                            |
 | `opt_keyword_storage`   | 可选的 `STORAGE` 关键字   | -          | `opt_storage`                              |
+| `opt_keyword_table`     | 可选的 `TABLE` 关键字     | -          | `opt_table`                                |
 | `opt_keyword_temporary` | 可选的 `TEMPORARY` 关键字 | `bool`     | `opt_temporary`                            |
+| `opt_keyword_work`      | 可选的 `WORK` 关键字      | `bool`     | `opt_work`                                 |
