--- a/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
+++ b/docs/语义组说明文档/基础语法元素（basic）/词语组合.md
@@ -5,6 +5,7 @@
 | `opt_keyword_all`       | 可选的 `ALL` 关键字       | `bool`     | `opt_all`<br />`opt_replica_reset_options` |
 | `opt_keyword_array`     | 可选的 `ARRAY` 关键字     | `bool`     | `opt_array_cast`                           |
 | `opt_keyword_as`        | 可选的 `AS` 关键字        | -          | `opt_as`                                   |
+| `opt_keyword_column`    | 可选的 `COLUMN` 关键字    | -          | `opt_column`                               |
 | `opt_keyword_default`   | 可选的 `DEFAULT` 关键字   | -          | `opt_default`                              |
 | `opt_keyword_extended`  | 可选的 `EXTENDED` 关键字  | `bool`     | `opt_extended`                             |
 | `opt_keyword_force`     | 可选的 `FORCE` 关键字     | `bool`     | `opt_force`                                |
